--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,25 +35,23 @@ body {
 
 .nav {
   display: flex;
-  justify-content: space-around;
-  padding: 20px;
+  justify-content: flex-end;
+  padding: 20px 40px;
   width: 100vw;
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: -0.84px;
+  line-height: 15.4px;
 }
 
-.navBar {
-  display: flex;
-  justify-content: space-around;
-  padding: 20px;
-  width: 100vw;
+.nav>div>* {
+  padding: 0px 10px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 img {
