--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,11 +36,19 @@ body {
 .nav {
   display: flex;
   justify-content: flex-end;
-  padding: 20px 40px;
+  padding: 25px 40px;
   width: 100vw;
   font-style: normal;
   font-size: 14px;
   font-weight: 500;
+  letter-spacing: -0.84px;
+  line-height: 15.4px;
+}
+
+.text-temp {
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 700;
   letter-spacing: -0.84px;
   line-height: 15.4px;
 }
