--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,19 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --xl: 56px;
+}
+
+@media (min-width: 900px) {
+  :root {
+    --xl: 100px;
+  }
+}
+
+@media (min-width: 1200px) {
+  :root {
+    --xl: 140px;
+  }
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -36,13 +49,35 @@ body {
 .nav {
   display: flex;
   justify-content: flex-end;
-  padding: 25px 40px;
+  padding: 20px;
   width: 100vw;
-  font-style: normal;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.84px;
   line-height: 15.4px;
+}
+
+.space-temp {
+  display: none;
+}
+
+.container-temp {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 600px) {
+  .space-temp {
+    display: inline-block;
+  }
+  .container-temp {
+    flex-direction: row;
+  }
+}
+
+.name {
+  font-size: var(--xl);
+  letter-spacing: calc(var(--xl) * 0.06);
 }
 
 .text-temp {
