--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,8 +62,7 @@ body {
   letter-spacing: calc(var(--xl) * 0.06);
 }
 
-.text-temp {
-  font-style: normal;
+.subtitle {
   font-size: 14px;
   font-weight: 700;
   letter-spacing: -0.84px;
